# space

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE_ASSETS  README.md  credits.md
.github/: FUNDING.yml
client/: Cargo.toml
client/src/: main.rs  plugin.rs
core/actions/: Cargo.toml
core/actions/src/: action.rs  core.rs  data.rs  lib.rs  net.rs  networking.rs  plugin.rs
core/api/: Cargo.toml
core/api/src/: actions.rs  chat.rs  combat.rs  connected_player.rs  console_commands.rs  converters.rs  data.rs  entity_updates.rs  examinable.rs  get_spawn_position.rs  gridmap.rs  health.rs  humanoid.rs  inventory.rs  lib.rs  load_entity.rs  network.rs  pawn.rs  rigid_body.rs  sensable.rs  senser.rs  ui.rs  world_environment.rs
core/app/: Cargo.toml
core/app/src/: correction.rs  main.rs  quit.rs
core/atmospherics/: Cargo.toml
core/atmospherics/src/: diffusion.rs  effects.rs  examine_events.rs  init.rs  lib.rs  map_events.rs  net.rs  notices.rs  plugin.rs  remove_cell_atmos_event.rs  rigidbody_forces.rs  sensing_ability.rs  zero_gravity.rs
core/basic_console_commands/: Cargo.toml
core/basic_console_commands/src/: commands.rs  gridmap.rs  help.rs  lib.rs  player_selectors.rs  plugin.rs  register.rs
core/cameras/: Cargo.toml
core/cameras/src/: lib.rs  look_transform.rs  print_position.rs
core/cameras/src/controllers/: fps.rs  orbit.rs  unreal.rs
core/chat/: Cargo.toml
core/chat/src/: chat.rs  input.rs  lib.rs  net.rs  networking.rs  plugin.rs  proximity_message.rs
core/chat_api/: Cargo.toml
core/chat_api/src/: core.rs
core/combat/: Cargo.toml
core/combat/src/: active_attacks.rs  apply_damage.rs  attack.rs  chat.rs  health_ui.rs  laser_visuals.rs  lib.rs  melee_queries.rs  plugin.rs  projectile_queries.rs  sfx.rs
core/connected_player/: Cargo.toml
core/connected_player/src/: boarding.rs  broadcast_interpolation_transforms.rs  chat.rs  connection.rs  connection_events.rs  console_commands.rs  examine_events.rs  execute_tab_action.rs  health_ui.rs  humanoid.rs  input.rs  lib.rs  name_generator.rs  net.rs  plugin.rs  send_entity_update.rs  send_net.rs  setup_ui.rs
core/console_commands/: Cargo.toml
core/console_commands/src/: commands.rs  connections.rs  init.rs  lib.rs  net.rs  networking.rs  player_selectors.rs  plugins.rs  rcon.rs
core/controller/: Cargo.toml
core/controller/src/: connections.rs  controller.rs  input.rs  lib.rs  net.rs  networking.rs  plugin.rs
core/data_converters/: Cargo.toml
core/data_converters/src/: converters.rs  lib.rs
core/doryen_fov/: Cargo.toml  LICENSE
core/doryen_fov/src/: fov_recursive_shadowcasting.rs  fov_restrictive.rs  lib.rs
core/entity/: Cargo.toml
core/entity/src/: actions.rs  base_mesh.rs  broadcast_interpolation_transforms.rs  commands.rs  despawn.rs  entity_data.rs  entity_types.rs  examine.rs  finalize_entity_updates.rs  health.rs  init.rs  lib.rs  loading.rs  meta.rs  net.rs  networking.rs  out_of_bounds_teleportation.rs  plugin.rs  register.rs  rigidbody_link_transform.rs  sensable.rs  senser.rs  showcase.rs  spawn.rs  spawn_rigidbody.rs  spawning_events.rs  visible_checker.rs
core/escape_menu/: Cargo.toml
core/escape_menu/src/: build.rs  events.rs  lib.rs  plugin.rs  toggle.rs
core/examinable/: Cargo.toml
core/examinable/src/: actions.rs  examine.rs  lib.rs  plugin.rs
core/graphics/: Cargo.toml
core/graphics/src/: lib.rs  panorama.rs  plugin.rs  settings.rs  skybox.rs  tonemapping.rs
core/gridmap/: Cargo.toml
core/gridmap/src/: build.rs  can_reach_entity.rs  commands.rs  connections.rs  construction.rs  events.rs  examine.rs  floor.rs  fov.rs  get_spawn_position.rs  graphics.rs  grid.rs  gridmap_graphics.rs  init.rs  init_meta.rs  items.rs  lib.rs  net.rs  networking.rs  plugin.rs  select_cell_yplane.rs  sensing_ability.rs  set_cell.rs  sync.rs  updates.rs  wall.rs
core/gridmap/src/items/: airlock_evac.rs  bridge_diagonal_ceiling.rs  bridge_floor.rs  bridge_half_diagonal_ceiling.rs  bridge_wall.rs  ceiling_light_bar.rs  evac_wall_clean.rs  evac_wall_lights.rs  exterior_wall.rs  floor_evac.rs  general_half_diagonal_ceiling.rs  general_half_diagonal_floor.rs  generic_assets.rs  generic_diagonal_ceiling.rs  generic_diagonal_floor.rs  generic_floor.rs  generic_half_diagonal_ceiling.rs  generic_half_diagonal_floor.rs  generic_meshes.rs  generic_wall.rs  generic_wall_group.rs  glass_wall.rs  half_ceiling.rs  large_window_3x3.rs  light_strip_horizontal.rs  radar.rs  reinforced_glass_floor.rs  reinforced_glass_half_diagonal.rs  reinforced_glass_wall.rs  small_window_3x3.rs  star_lights.rs  vents_access.rs  wall_clean.rs  wall_flat.rs  wall_high_curbed.rs  wall_light_bulb.rs  wall_low_curbed.rs  wall_reinforced_glass.rs
core/gridmap_meta/: Cargo.toml
core/gridmap_meta/src/: core.rs
core/health/: Cargo.toml
core/health/src/: core.rs  examine_events.rs  lib.rs  net.rs  plugin.rs
core/hud/: Cargo.toml
core/hud/src/: build.rs  communication.rs  expand.rs  hud.rs  input.rs  inventory.rs  lib.rs  mouse.rs  plugin.rs  server_stats.rs
core/hud/src/communication/: build.rs  chat.rs  console.rs  input.rs
core/hud/src/input/: binds.rs  text_tree_selection.rs
core/hud/src/inventory/: actions.rs  build.rs  items.rs  queue.rs  slots.rs
core/humanoid/: Cargo.toml
core/humanoid/src/: entity_update.rs  examine_events.rs  humanoid.rs  lib.rs  plugin.rs  thrown_item.rs  toggle_combat_mode.rs  user_name.rs
core/inventory/: Cargo.toml
core/inventory/src/: actions.rs  actions_item.rs  client.rs  combat.rs  entity_update.rs  entity_update_item.rs  inventory.rs  inventory_tab_data.rs  item.rs  item_events.rs  lib.rs  net.rs  networking.rs  plugin.rs  server.rs  spawn_item.rs  switch_hands.rs
core/inventory_api/: Cargo.toml
core/inventory_api/src/: core.rs  lib.rs
core/inventory_item/: Cargo.toml
core/inventory_item/src/: actions.rs  combat.rs  entity_update.rs  item.rs  lib.rs  plugin.rs  spawn.rs
core/main_menu/: Cargo.toml
core/main_menu/src/: build.rs  events.rs  hide.rs  lib.rs  plugin.rs
server/: Cargo.toml
server/src/: main.rs  plugin.rs  server.rs
(+2185 files in other folders)
