[workspace]
members = ["core/*","entities/*", "server", "client"]
default-members = ["core/*","entities/*", "server", "client"]
resolver = "2"

# Compile dependencies
[profile.dev.package."*"]
opt-level = 3

# Compile self
[profile.dev]
opt-level = 1

# Compile test / CI
[profile.test]
opt-level = 0   
[profile.test.package."*"]
opt-level = 0

# Compile release
[profile.release]
lto = "thin"
