[package]
name = "client"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Space Frontiers, the client."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.9.0"

[dependencies]
bevy_egui = {version = "0.17.1",default-features=false, features=["manage_clipboard"]}

networking = { path = "../core/networking",  features=["client"] }
main_menu = { path = "../core/main_menu",  features=["client"] }
winit_windows = { path = "../core/winit_windows",  features=["client"] }
resources = { path = "../core/resources",  features=["client"] }
ui = { path = "../core/ui",  features=["client"] }
