[package]
name = "client"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Space Frontiers, the client."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.9.1"

[dependencies]
bevy_egui = { version = "0.18.0", default-features = false, features = [
    "manage_clipboard",
] }

networking = { path = "../core/networking", features = ["client"] }
main_menu = { path = "../core/main_menu", features = ["client"] }
resources = { path = "../core/resources", features = ["client"] }
ui = { path = "../core/ui", features = ["client"] }
setup_ui = { path = "../core/setup_ui", features = ["client"] }
player = { path = "../core/player", features = ["client"] }
actions = { path = "../core/actions", features = ["client"] }
chat = { path = "../core/chat", features = ["client"] }
console_commands = { path = "../core/console_commands", features = ["client"] }
controller = { path = "../core/controller", features = ["client"] }
entity = { path = "../core/entity", features = ["client"] }
gridmap = { path = "../core/gridmap", features = ["client"] }
inventory = { path = "../core/inventory", features = ["client"] }
map = { path = "../core/map", features = ["client"] }
pawn = { path = "../core/pawn", features = ["client"] }
sfx = { path = "../core/sfx", features = ["client"] }
physics = { path = "../core/physics", features = ["client"] }
