[package]
name = "client"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Space Frontiers, the client."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.9.1"

[dependencies]
bevy_egui = { version = "0.18.0", default-features = false, features = [
    "manage_clipboard",
] }

networking = { path = "../core/networking", features = ["client"] }
main_menu = { path = "../core/main_menu", features = ["client"] }
resources = { path = "../core/resources", features = ["client"] }
ui = { path = "../core/ui", features = ["client"] }
setup_menu = { path = "../core/setup_menu", features = ["client"] }
player = { path = "../core/player", features = ["client"] }
actions = { path = "../core/actions", features = ["client"] }
chat = { path = "../core/chat", features = ["client"] }
console_commands = { path = "../core/console_commands", features = ["client"] }
controller = { path = "../core/controller", features = ["client"] }
entity = { path = "../core/entity", features = ["client"] }
gridmap = { path = "../core/gridmap", features = ["client"] }
inventory = { path = "../core/inventory", features = ["client"] }
map = { path = "../core/map", features = ["client"] }

pawn = { path = "../core/pawn", features = ["client"] }
sfx = { path = "../core/sfx", features = ["client"] }
physics = { path = "../core/physics", features = ["client"] }

airlocks = { path = "../entities/airlocks", features = ["server"] }
computers = { path = "../entities/computers", features = ["server"] }
construction_tool_admin = { path = "../entities/construction_tool_admin", features = [
    "server",
] }
counter_windows = { path = "../entities/counter_windows", features = [
    "server",
] }
helmet_security = { path = "../entities/helmet_security", features = [
    "server",
] }
human_male = { path = "../entities/human_male", features = ["server"] }
jumpsuit_security = { path = "../entities/jumpsuit_security", features = [
    "server",
] }
line_arrow = { path = "../entities/line_arrow", features = ["server"] }
pistol_l1 = { path = "../entities/pistol_l1", features = ["server"] }
point_light = { path = "../entities/point_light", features = ["server"] }
sounds = { path = "../entities/sounds", features = ["server"] }
