[package]
name = "server"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <nikitaab98@gmail.com>"]
description="A modular Bevy ECS community game server for Space Frontiers."
homepage="https://github.com/starwolves/space"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.7.0"
default-features = false

[dependencies]
space_plugin = { path = "../core/space_plugin" }
api = { path = "../core/api" }
