[package]
name = "actions"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Actions enable pawns to interact with the world and other entities."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
server = []
client = []

[dependencies.bevy]
version = "0.8.1"
default-features = false

[dependencies]
networking = { path = "../networking",  features=["server"] }
networking_macros = { path = "../networking_macros",  features=["server"] }
server_instance = { path = "../server_instance",  features=["server"] }
math = { path = "../math",  features=["server"] }
