[package]
name = "actions"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Actions enable pawns to interact with the world and other entities."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
server = []
client = []

[dependencies.bevy]
version = "0.9.0"
default-features = false

[dependencies]
bevy_renet = "0.0.6"
bincode = "1.3.3"
serde = "1.0.147"
typename = "0.1.2"

networking = { path = "../networking",  features=["server"] }

resources = { path = "../resources",  features=["server"] }
math = { path = "../math",  features=["server"] }
