[package]
name = "actions"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Actions enable pawns to interact with the world and other entities."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.12"

default-features = false

[dependencies]
serde = "1.0.177"
typename = "0.1.2"

networking = { path = "../networking"}

resources = { path = "../resources"}
