[package]
name = "api"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Shared resources."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.8.0"
default-features = false

[dependencies]
serde = "1.0.137"
rand = "0.8.5"
bevy_rapier3d = "0.16.0"
const_format = "0.2.23"
