[package]
name = "atmospherics"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Atmospherics manages gravity, temperature, pressure etc."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.8.0"
default-features = false

[dependencies]
bevy_rapier3d = "0.16.0"


networking = { path = "../networking" }
networking_macros = { path = "../networking_macros" }
pawn = { path = "../pawn" }
chat_api = { path = "../chat_api" }
map = { path = "../map" }
physics = { path = "../physics" }
rigid_body = { path = "../rigid_body" }
gridmap = { path = "../gridmap" }
entity = { path = "../entity" }
data_link = { path = "../data_link" }
server = { path = "../server" }
math = { path = "../math" }
