[package]
name = "atmospherics"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Atmospherics manages gravity, temperature, pressure etc."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
server = []
client = []

[dependencies.bevy]
version = "0.8.1"
default-features = false

[dependencies]
bevy_rapier3d = "0.18.0"


networking = { path = "../networking",  features=["server"] }
networking_macros = { path = "../networking_macros",  features=["server"] }
pawn = { path = "../pawn",  features=["server"] }
chat_api = { path = "../chat_api",  features=["server"] }
map = { path = "../map",  features=["server"] }
physics = { path = "../physics",  features=["server"] }
rigid_body = { path = "../rigid_body",  features=["server"] }
gridmap = { path = "../gridmap",  features=["server"] }
entity = { path = "../entity",  features=["server"] }
data_link = { path = "../data_link",  features=["server"] }
resources = { path = "../resources",  features=["server"] }
math = { path = "../math",  features=["server"] }
