[package]
name = "atmospherics"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Atmospherics manages gravity, temperature, pressure etc."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies]
bevy_rapier3d = "0.19.0"
iyes_loopless = "0.9.1"

networking = { path = "../networking"}

pawn = { path = "../pawn"}
text_api = { path = "../text_api"}
map = { path = "../map"}
gridmap = { path = "../gridmap"}
entity = { path = "../entity"}
resources = { path = "../resources"}
math = { path = "../math"}
ui = { path = "../ui" }
physics = { path = "../physics" }
