[package]
name = "basic_console_commands"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Contains basic console commands."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.10.0"
default-features = false

[dependencies]

console_commands = { path = "../console_commands"}
gridmap = { path = "../gridmap"}
player = { path = "../player"}
pawn = { path = "../pawn"}
networking = { path = "../networking"}

entity = { path = "../entity"}
text_api = { path = "../text_api"}
resources = { path = "../resources" }
