[package]
name = "cameras"
description = "Bevy camera controllers with buttery, exponential smoothing."
version = "0.7.0"
repository = "https://github.com/bonsairobo/smooth-bevy-cameras"
authors = ["Duncan <bonsairobo@gmail.com>"]
keywords = ["bevy", "camera"]
edition = "2021"
license = "MIT"

[dependencies.bevy]
version = "0.12"

default-features = false

[dependencies]
approx = "0.5.1"
serde = "1.0.177"
bevy_xpbd_3d = { version = "0.3.2" , features = ["enhanced-determinism"]}

resources = { path = "../resources" }
networking = { path = "../networking" }
