[package]
name = "chat"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Chat managing proximity and radio communication."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.12"

default-features = false

[dependencies]
serde = "1.0.177"
typename = "0.1.2"
bevy_renet = {version = "0.0.9", git="https://github.com/lucaspoffo/renet.git", branch="master" }

networking = { path = "../networking" }

player = { path = "../player" }
resources = { path = "../resources" }
ui = { path = "../ui" }
