[package]
name = "combat"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "For combat and damage applications."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.11.0"
default-features = false

[dependencies]
bevy_xpbd_3d = { version = "0.2.0" , features = ["enhanced-determinism"]}

rand = "0.8.5"

networking = { path = "../networking" }

sounds = { path = "../../entities/sounds"}
gridmap = { path = "../gridmap" }
sfx = { path = "../sfx" }
chat = { path = "../chat" }
entity = { path = "../entity" }
resources = { path = "../resources" }
physics = { path = "../physics" }
inventory = { path = "../inventory" }
