[package]
name = "combat"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "For combat and damage applications."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.13.0"

default-features = false

[dependencies]

rand = "0.8.5"

networking = { path = "../networking" }

sounds = { path = "../../entities/sounds"}
gridmap = { path = "../gridmap" }
sfx = { path = "../sfx" }
chat = { path = "../chat" }
entity = { path = "../entity" }
resources = { path = "../resources" }
inventory = { path = "../inventory" }
