[package]
name = "console_commands"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Console commands are a powerful way to remotely interact with the server as an admin or regular player."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
server = []
client = []

[dependencies.bevy]
version = "0.9.0"
default-features = false

[dependencies]
serde = "1.0.147"
typename = "0.1.2"

networking = { path = "../networking",  features=["server"] }

resources = { path = "../resources",  features=["server"] }
player = { path = "../player",  features=["server"] }
