[package]
name = "console_commands"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Console commands are a powerful way to remotely interact with the server as an admin or regular player."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.12"

default-features = false

[dependencies]
serde = "1.0.177"
typename = "0.1.2"
bevy_renet = "0.0.10"

networking = { path = "../networking" }

resources = { path = "../resources"}
player = { path = "../player" }
ui = { path = "../ui" }
