[package]
name = "controller"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Logic regarding connected clients."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"
[dependencies.bevy]
version = "0.11.3"

default-features = false



[dependencies]
bevy_renet = "0.0.9"
serde = "1.0.177"
typename = "0.1.2"
bevy_xpbd_3d = { version = "0.2.0" , features = ["enhanced-determinism"], git = "https://github.com/Jondolf/bevy_xpbd.git", branch="main"}

player = { path = "../player" }
networking = { path = "../networking" }
pawn = { path = "../pawn" }
combat = { path = "../combat"}
resources = { path = "../resources"}
entity = { path = "../entity"}
physics = { path = "../physics"}
