[package]
name = "controller"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Logic regarding connected clients."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"
[dependencies.bevy]
version = "0.12"

default-features = false



[dependencies]
bevy_renet = "0.0.10"
serde = "1.0.177"
typename = "0.1.2"
bevy_xpbd_3d = { version = "0.3.2" , features = ["enhanced-determinism"]}
bincode = "1.3.3"


player = { path = "../player" }
networking = { path = "../networking" }
pawn = { path = "../pawn" }
resources = { path = "../resources"}
entity = { path = "../entity"}
physics = { path = "../physics"}
cameras = { path = "../cameras"}
