[package]
name = "controller"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Logic regarding connected clients."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"
[dependencies.bevy]
version = "0.14.1"

default-features = false



[dependencies]
bevy_renet = { version = "0.0.12", git = "https://github.com/starwolfy/renet.git"}
serde = "1.0.177"
typename = "0.1.2"
bincode = "1.3.3"

player = { path = "../player" }
networking = { path = "../networking" }
pawn = { path = "../pawn" }
resources = { path = "../resources"}
entity = { path = "../entity"}
physics = { path = "../physics"}
cameras = { path = "../cameras"}
