[package]
name = "data_converters"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Data conversions."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
server = []
client = []

[dependencies.bevy]
version = "0.9.0"
default-features = false

[dependencies]
bevy_rapier3d = "0.19.0"
ron ="0.8.0"
serde_json = "1.0.87"
serde = "1.0.147"

math = { path = "../math",  features=["server"] }
