[package]
name = "entity"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Entity base."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies]
serde = "1.0.150"
typename = "0.1.2"
bevy_rapier3d = "0.19.0"
ron = "0.8.0"
dyn-clone = "1.0.10"

doryen_fov = { path = "../doryen_fov" }
networking = { path = "../networking" }
math = { path = "../math"}
resources = { path = "../resources" }
text_api = { path = "../text_api"}
entity_macros = { path = "../entity_macros" }
