[package]
name = "entity"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Entity base."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.11.3"

default-features = false

[dependencies]
serde = "1.0.177"
typename = "0.1.2"
ron = "0.8.0"
dyn-clone = "1.0.12"
bevy_renet = "0.0.9"

doryen_fov = { path = "../doryen_fov" }
networking = { path = "../networking" }
resources = { path = "../resources" }
text_api = { path = "../text_api"}
entity_macros = { path = "../entity_macros" }
