[package]
name = "escape_menu"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "The ESC menu."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.10.0"
default-features = false

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
resources = { path = "../resources" }
hud = { path = "../hud" }
ui = { path = "../ui" }
main_menu= { path = "../main_menu" }
graphics = { path = "../graphics" }
